--- a/[Part 3]End-to-end.ipynb
+++ b/[Part 3]End-to-end.ipynb
@@ -15,7 +15,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.gridspec as gridspec\n",
-    "from utils import detect_lp\n",
+    "from local_utils import detect_lp\n",
     "from os.path import splitext,basename\n",
     "from keras.models import model_from_json\n",
     "from keras.preprocessing.image import load_img, img_to_array\n",
@@ -105,9 +105,7 @@
     "        img = cv2.resize(img, (224,224))\n",
     "    return img\n",
     "\n",
-    "def get_plate(image_path):\n",
-    "    Dmax = 608\n",
-    "    Dmin = 288\n",
+    "def get_plate(image_path, Dmax=608, Dmin = 608):\n",
     "    vehicle = preprocess_image(image_path)\n",
     "    ratio = float(max(vehicle.shape[:2])) / min(vehicle.shape[:2])\n",
     "    side = int(ratio * Dmin)\n",
